Fixed button text alignment.

--- a/src/components/AutoplayButtonSlider/AutoplayButtonSlider.css
+++ b/src/components/AutoplayButtonSlider/AutoplayButtonSlider.css
@@ -34,6 +34,14 @@
     margin-right: 20px;
 }
 
+.text-inline {
+  inline-size: 150px;
+}
+
+.text {
+  text-align: left;
+}
+
 .btn-typo4.primary {
   background: linear-gradient(60deg,#01A982 0 13%,#1cd3a8 20%,#01A982 27%,#01A982);
   background-position: 99% 50%;
@@ -54,7 +62,7 @@
   max-width: 400px;
   min-height: 36px;
   min-width: 0;
-  padding: 10px 30px;;
+  padding: 10px 20px;;
 }
 
 .btn-typo4 {
@@ -121,21 +129,22 @@
   flex: 60%;
 }
 
-.arrow-span {
-  color: "blue";
-}
-
 /* Responsive layout - makes a one column-layout instead of two-column layout */
 @media (max-width: 800px) {
   .flex-container {
     flex-direction: column-reverse;
   }
+
   .hero-title {
     font-size: 30px;
   }
 
   .hero-description {
     font-size: 20px;
+  }
+
+  .btn-typo4.rounded {
+    font-size: 15px;
   }
 }
 
